Minecraft X-Ray 2.7 Maintenance Branch 6 (2011.01.19)

  * Fixed a bug where wool and wood wouldn't be considered solid blocks
  * Ability to warp to any player's position with INS/DEL when loading
    multiplayer worlds
  * Minecart tracks, paintings and fences render properly now
  * Fixed a NullPointerException related to dyed wool

Minecraft X-Ray 2.7 Maintenance Branch 5 (2011.01.17)

  * Generate Windows EXE via JSmooth
  * Fixed a bug that was keeping chunk files open
  * Load chunks on-demand rather than at program start
  * X-Ray should now handle any map, regardless of size
  * Handle corrupt/invalid chunks more gracefully
  * Changed default starting memory from 128MB to 256MB
  * World selection merged in with main options dialog
  * Ability to select arbitrary directories to open worlds
  * "N" key will toggle back and forth between Nether and Overworld, if available.
  * Minimap rotated so that north points up (previously it had pointed left)
  * Added Y position to position popup
  * Added support for new Beta 1.2 Blocks
  * Added Lapis Lazuli to highlightable ore list
  * Fullscreen toggle changed to Backspace

Minecraft X-Ray 2.7 Maintenance Branch 4 (2010.12.16)

  * Camera speed can be controlled by the left and right mouse buttons,
    in addition to left and right shift.
  * "Fast" camera speed has been given another 50% speed boost
  * (internal) Add in Ant build.xml to automate releasing
  * (internal) Ore highlights are specified by block type, not texture type
  * The following render more-correctly: redstone torches, redstone wire,
    crops, mushrooms, flowers, planted saplings, reeds, ladders, sponges,
    minecart tracks, pressure plates, half-height steps, doors, stairs,
    signs (though without the message), fences (though we make no effort
    to try and chain them together; all fence pieces will be oriented the
    same way), levers, buttons, portals.
  * Fixed an issue loading worlds which don't yet include the "Dimension" tag